fix trash alignment issue. fixes #26

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,8 @@
   margin-right: 5px;
   border: 1px solid #666666;
   border-radius: 10px;
+  margin-top: 5px;
+  margin-left: 5px;
   box-shadow: 10px 10px 10px #888888;
 }
 
